--- a/wysa-frontend/package.json
+++ b/wysa-frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ios-time-picker": "^0.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
